--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shop Name</title>
+  <link href="https://fonts.googleapis.com/css?family=News+Cycle|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
   <base href="/">
